# flask

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt  uwsgi.ini
.github/workflows/: aws-oidc.yml  docker-image.yml
flaskapi/: application.py  main.py  manage.py  settings.py
flaskapi/author/: author.py  forms.py  marshmallow.py  models.py  security.py
flaskapi/blog/: blog.py  marshmallow.py  models.py
flaskapi/migrations/versions/: 158d20707cff_.py  498c0554bf32_.py  59b153e36b3f_.py  67c1c21a842c_.py  77937f6f3896_.py  82f8b195f071_.py  86bfcc615bbf_.py  ef1531900ca2_.py  f05459d20a78_.py
flaskapi/post/: marshmallow.py  models.py  post.py
flaskapi/templates/: index.html
flaskapi/templates/author/: register.html
tests/: test_flaskapi.py
