[tool.poetry]
name = "FlaskAPI"
version = "0.1.0"
description = ""
authors = ["Ivan Indjic <ivanindjic@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
Flask = "2.0.2"
pydantic = "1.9.0"
pylint = "2.12.2"
Flask-SQLAlchemy = "2.5.1"
Flask-Migrate = "3.1.0"
python-dotenv = "0.19.2"
psycopg2 = "2.9.3"
WTForms = "3.0.1"
Flask-WTF = "1.0.0"
email-validator = "1.1.3"
Werkzeug = "2.0.3"
flask-marshmallow = "0.14.0"
marshmallow-sqlalchemy = "0.27.0"
uWSGI = "^2.0.20"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
